--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,9 @@ services:
     image: traefik:v3.5.2
     container_name: traefik
     volumes:
-      - ${PWD}/traefik-config/traefik.yml:/etc/traefik/traefik.yml
-      - ${PWD}/traefik-config/traefik-routing.yml:/traefik-routing.yml
+      - ${PWD}/traefik-config/traefik.yml:/etc/traefik/traefik.yml:ro
+      - ${PWD}/traefik-config/traefik-routing.yml:/traefik-routing.yml:ro
+      - ${PWD}/traefik-config/digestUsers.txt:/digestUsers.txt:ro
     networks:
       - grafana-network
     ports:
