--- a/grafana-config/grafana-provisioning.yml
+++ b/grafana-config/grafana-provisioning.yml
@@ -6,3 +6,10 @@ datasources:
     jsonData:
       timeout: 60
       maxLines: 1000
+  - name: Prometheus
+    type: prometheus
+    access: proxy
+    url: http://prometheus:9090
+    jsonData:
+      timeInterval: 10s # Prometheus scrape interval
+
