--- a/prometheus-config/prometheus.yml
+++ b/prometheus-config/prometheus.yml
@@ -5,10 +5,8 @@ global:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: 'frog1'
+  #- job_name: 'frog1'
+    #scrape_interval: 10s
 
-    # Override the global default and scrape targets from this job every 5 seconds.
-    scrape_interval: 10s
-
-    static_configs:
-      - targets: ['prometheus-feeder:7074']
+    #static_configs:
+      #- targets: ['prometheus-feeder:7074']
